manifests/huginn/huginn-threaded-deployment.yaml
# Configuration for Huginn workers.
# This does not configure the Huginn web interface. For that, see the hugin-web configuration
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: null
  generation: 1
  labels:
    io.kompose.service: huginn-threaded
  name: huginn-threaded
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: huginn-threaded
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: huginn-threaded
    spec:
      containers:
      - args:
        - /scripts/init
        - bin/threaded.rb
        image: huginn/huginn-single-process
        imagePullPolicy: IfNotPresent
        name: huginn-threaded
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    io.kompose.service: huginn-threaded
  name: huginn-threaded
spec:
  # No ClusterIP; this service provides workers for Huginn
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    protocol: TCP
    targetPort: 55555
  selector:
    io.kompose.service: huginn-threaded
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
