manifests/huginn/huginn-web-deployment.yaml
# Configuration for a deployment and service of Huginn's web interface
# This does not configure any Huginn workers; see the huginn-threaded configuration for that
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  generation: 1
  labels:
    io.kompose.service: huginn-web
  name: huginn-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: huginn-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: huginn-web
        io.kompose.service: huginn-web
    spec:
      containers:
      - env:
        - name: DATABASE_ADAPTER
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: database-adapter
        - name: DATABASE_NAME
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: database-name
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: database-password
        - name: DATABASE_USERNAME
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: database-username
        - name: DATABASE_HOST
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: database-host
        - name: DATABASE_PORT
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: database-port
        - name: DATABASE_ENCODING
          # This isn't secret
          value: utf8
        - name: POSTGRES_PORT_5432_TCP_PORT
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: postgres-port-tcp-port
        - name: POSTGRES_PORT_5432_TCP_ADDR
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: postgres-port-tcp-addr
        - name: APP_SECRET_TOKEN
          valueFrom:
            secretKeyRef:
              name: huginn-configuration
              key: app-secret-token
        # This is not secret
        - name: DO_NOT_CREATE_DATABASE
          value: "true"
        image: huginn/huginn-single-process
        imagePullPolicy: IfNotPresent
        name: huginn-web
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    io.kompose.service: huginn-web
  name: huginn-web
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    io.kompose.service: huginn-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
