manifests/huginn/huginn-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # Use traefik to serve this ingress
    kubernetes.io/ingress.class: "traefik"
  generation: 1
  name: huginn-web-ingress
spec:
  rules:
  - host: hugs.sharkbaitextraordinaire.com
    http:
      paths:
      - backend:
          serviceName: huginn-web
          servicePort: http
        path: /
status:
  loadBalancer: {}
